# magpie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.sh  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/endpoints/: blog.py  campaigns.py  opportunities.py  posts.py  reddit.py  scheduler.py  signals.py  stats.py  subs.py  team.py
app/core/: config.py  logging_config.py
app/db/: store.py
app/db/migrations/: 001_campaigns.sql  002_campaign_variants.sql  003_campaign_subs.sql  004_posts.sql  005_sub_rules.sql  006_engagement.sql  007_opportunities.sql  010_signal_rules.sql  011_signals.sql  012_signal_scrape_state.sql  013_sub_rules_post_url.sql  014_posts_opportunity_link.sql  015_campaign_type.sql  016_campaign_subs_comment_config.sql  017_posts_campaign_nullable.sql  017_variant_blog_fields.sql  018_campaign_subs_max_posts.sql  019_variant_link_url.sql  020_team_accounts.sql  021_opportunities_assignment.sql  022_posts_account_tracking.sql
app/services/: directus.py  platforms.py  poster.py  scheduler.py  scraper.py
app/services/lemmy/: client.py
app/services/reddit/: __init__.py  client.py  post.py  session.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  theme.css
frontend/src/components/: CampaignDetail.vue  CampaignList.vue  OpportunitiesView.vue  PostsView.vue  SessionWidget.vue  SignalsView.vue  (+3 more)
mcp/: package.json  server.js
scripts/: migrate_sessions.py  seed_campaigns.py  spa_server.py
tests/services/: test_poster.py
(+4 files in other folders)
